www/ui/css/screen.css
@CHARSET "UTF-8";
/*
Copyright (c) 2009, Yahoo! Inc. All rights reserved.
Code licensed under the BSD License:
http://developer.yahoo.net/yui/license.txt
version: 2.8.0r4
*/
html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var,optgroup{font-style:inherit;font-weight:inherit;}del,ins{text-decoration:none;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:baseline;}sub{vertical-align:baseline;}legend{color:#000;}input,button,textarea,select,optgroup,option{font-family:inherit;font-size:inherit;font-style:inherit;font-weight:inherit;}input,button,textarea,select{*font-size:100%;}a{outline:none;}

body {
	background-color: #fff;
	padding:10px;
	font-family: Lucida Grande, Verdana, Sans-serif;
	font-size: 14px;
	color: #4F5155;
}

a {
	color: #999;
	background-color: transparent;
	font-weight: normal;
}

h1,h2,h4,h5 {
	color: #444;
	background-color: transparent;
	font-size: 1.2em;
	font-weight: bold;	
}
h5{
	margin:10px 0;
}
h5,h4,h3{
    font-size:1em;
}
code {
	font-family: Monaco, Verdana, Sans-serif;
	font-size: 12px;
	background-color: #f9f9f9;
	border: 1px solid #D0D0D0;
	color: #002166;
	display: block;
	margin: 14px 0 14px 0;
	padding: 12px 10px 12px 10px;
}

#thumbs {
	position:relative;
	z-index:1;
	width:130px;
	border:1px solid #333;
}
#thumbs div {
	position:relative;
	z-index:2;
	width:28px;
	height:28px;	
	float:left;
	margin:10px 10px 10px 0;
	border:1px solid #333;
}
#container {
	position:relative;
	width:762px;
	height:500px;
}
#container div.outer {
	position:absolute;
	/*top:0; left:0;*/
	background:#fff;
	border:1px solid #666;
	z-index:3;	
	width:234px;
	height:234px;
	overflow:hidden;	
}
#container div.outer .inner{
	margin:8px 16px 0 16px;	
}
#container div.active {
	border:2px solid #000;
}
#container div.fullSize {
	top:0!important;
	left:0!important;
	width:762px;
	height:900px;
	scroll:auto;
	z-index:4;
	position:absolute;
}
#globalOuter {
	position:relative;
	width:762px;
	margin:20px auto 0 auto;
	overflow-x:hidden;
}
#navigation {
	display:none;
}
#home,
#box1 {
	top:0px;
	left:0px;
}
#box2 {
	top:0px;
	left:254px;
}
#box3 {
	top:0px;
	left:508px;
}
#box4 {
	top:250px;
	left:0px;
}
#box5 {
	top:250px;
	left:254px;
}
#box6 {
	top:250px;
	left:508px;
}
#box7 {
	top:500px;
	left:0px;
}
#box8 {
	top:500px;
	left:254px;
}
#box9 {
	top:500px;
	left:508px;
}
/**/
#prev1 {
	top:0px;
	left:0px;
}
#prev2 {
	top:0px;
	left:-254px;
}
#prev3 {
	top:0px;
	left:-508px;
}
#prev4 {
	top:250px;
	left:0px;
}
#prev5 {
	top:250px;
	left:-254px;
}
#prev6 {
	top:250px;
	left:-508px;
}
#prev7 {
	top:500px;
	left:0px;
}
#prev8 {
	top:500px;
	left:-254px;
}
#prev9 {
	top:500px;
	left:-508px;
}
#next1 {
	top:0px;
	left:762px;
}
#next2 {
	top:0px;
	left:1016px;
}
#next3 {
	top:0px;
	left:1270px;
}
#next4 {
	top:250px;
	left:762px;
}
#next5 {
	top:250px;
	left:1016px;
}
#next6 {
	top:250px;
	left:1270px;
}
#next7 {
	top:500px;
	left:762px;
}
#next8 {
	top:500px;
	left:1016px;
}
#next9 {
	top:500px;
	left:1270px;
}
.item {
	margin:5px 0;
}

.regular div {
	background: #eee;
    padding-left:10px;
}
#profilePic {
	float:right;
	background:#fff;
	border:1px solid #444;
}
#profilePic img{
	display:block;
	margin: 2px 2px 10px 2px!important;
}
.home {
	background:#b0b0b0 !important;	
}
.home .inner{
	padding:16px;
	margin:0 !important;
}
.home strong {
	font-weight:bold;
}
.home h1 {
	margin-bottom:2px;
}
.home .pubDate,
.home a.close,
.home .boxFooter{
	display:none;
}
.tweetTime,
.commitTime{
    margin-left:6px;
    font-size: 0.8em;
	color:#111;
    fontsize:bold;
	text-decoration:itallic;		
	display:block;
	height:40px;
	width:40px;
    clear:both;
	float:right;
}
.tweetTime{
    background:transparent url(/ui/images/twitter_icon_small.jpg) no-repeat 12px 14px;
}
.commitTime {
	background:transparent url(/ui/images/git_icon_small.jpg) no-repeat 0px 14px;
}
#nav {
	display:none;
}
.pubDate {
	font-weight:bold;
}
.pagination a {
	text-decoration:none;
	color:#000;
}
.git div{
    background:#eee;
    padding:0 10px;
}
.tweet div{
    background:LightCyan;
    padding:0 10px;
}
.pagination,
.paginationjs,
.paginationFullWidth {    
	margin:20px 0;
    clear:both;
}
.boxFooter{
	background:transparent url(/ui/images/boxFade.png) repeat-x bottom left;
	width:100%;
	position:absolute;
	bottom:0;
	height:60px;
}

#header img{
    clear:both;
    display:block;
}
.paginationFullWidth .forwards{
    float:right;
}
#footer ul{
    margin:10px 0;
}
#footer ul li{   
    border-left:1px solid #777;
    padding-left:14px;
    margin-right:14px;
    float:left;
}
#footer ul li.first{
	padding-left:0;
    border-left:none;
}
.b1ftw, .b2ftw, .b3ftw, .b4ftw{font-size:1px; overflow:hidden; display:block;}
.b1ftw {height:1px; background:LightCyan ; margin:0 5px;}
.b2ftw {height:1px; background:LightCyan ; margin:0 3px;}
.b3ftw {height:1px; background:LightCyan ; margin:0 2px;}
.b4ftw {height:2px; background:LightCyan ; margin:0 1px;}
.b1frg, .b2frg, .b3frg, .b4frg{font-size:1px; overflow:hidden; display:block;}
.b1frg {height:1px; background:#eee ; margin:0 5px;}
.b2frg {height:1px; background:#eee ; margin:0 3px;}
.b3frg {height:1px; background:#eee ; margin:0 2px;}
.b4frg {height:2px; background:#eee ; margin:0 1px;}
.fullItem{
    margin:10px 0;
}
.tweet a{
    color:#47D1FF;
    text-decoration: none;
    font-weight: bold;
}
.fullItem div{
    min-height:46px;
}
#container img{
    border:1px solid #888;
    padding:4px 4px 10px 4px;
    display:block;
    margin:10px;
}
.home img{
    border:none!important;
    margin:0!important;
}
.quote{   
    margin:20px 0;
}
.comment-title{
    margin-bottom:10px;
    clear:both;
}

#user-comments,
h4.comment-title{
    margin:5px 0;
}
#user-comments .right{
   float:left; 
}
#user-comments .left{
    float:left;
    width:200px;    
}
#user-comments br{
    clear:both;
}
.strQ,
.endQ{
    background:#fff url("/ui/images/quote.jpg") no-repeat top left;
    width:14px;
    height:12px;
    display:block;
    text-indent: -9999px;
}
.right p{
    margin:0 6px;
}
.strQ,
.endQ,
#user-comments .right p{
    float:left;
}
h3#app-error{
	margin:30px 0;
	font-weight:bold;
}
#header a{
	width:292px;
	display:block;
}
.paginationjs .selected{
	color:#333!important;
	font-weight:bold;
	text-decoration:underline!important;
}
.paginationjs{
	color:#777;
}
.pageTitle{
	margin:20px 0;
}

